[project]
name = "yt-to-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "google-generativeai>=0.8.5",
    "langgraph>=0.4.10",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "uvicorn>=0.35.0",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2025.6.25",
]
